--- a/Selmi.html
+++ b/Selmi.html
@@ -73,13 +73,13 @@ Vignola deve molto a questo suo figlio, che le fu per tutta la vita legatissimo:
 
 <h5><big><big><big><big><strong><center>SELMI VERSEGGIATORE</center></strong></big></big></big></big></big></h5><br><br>
 <p><big>Durante l’adolescenza e la prima maturità, Selmi si dedicò non occasionalmente alla composizione di versi, spesso lasciandoli manoscritti.<br>
-Il suo lavoro poetico più noto è senza dubbio quello che egli destinò a celebrare il paese natale: si tratta di <i>Canto a Vignola</i>, uscito nell’aprile 1840 all’interno del «Giornale letterario scientifico modenese» (t. II, n. 7, pp. 77-80). Quest’opera consta di tredici strofe di otto versi ciascuna: il primo, il secondo, il quarto, il quinto e l’ottavo sono endecasillabi, mentre il terzo e il settimo sono settenari; lo schema delle rime è ABcBACdD. Il testo poetico è accompagnato da sette note a piè di pagina esplicative; alla loro compilazione potrebbe aver partecipato l’Autore, a dispetto di quanto si legge nella seconda nota e a dispetto di imprecisioni o errori contenute in altre (limitandoci all’ultima, il celebre medico e veterinario Antonio Alessandrini nacque a Bologna nel 1786 e morì nella stessa città 1861 senza vantare alcun parente originario di Vignola e senza avere mai risieduto in quella località, anche se da ragazzino egli dimorò nella vicina Savignano sul Panaro; pochi anni dopo la pubblicazione di questo poemetto, Selmi maturò rapporti amichevoli e di collaborazione professionale con lui e, poi, con uno dei suoi migliori allievi, il bolognese Giovanni Battista Ercolani [1817-1883], al quale rimase legatissimo per tutto il resto della vita e del quale fu collega all’Ateneo petroniano dal 1867 al 1881, anno della morte del nostro personaggio).<br><br> 
+Il suo lavoro poetico più noto è senza dubbio quello che egli destinò a celebrare il paese natale: si tratta di <i>Canto a Vignola</i>, uscito nell’aprile 1840 all’interno del «Giornale letterario scientifico modenese» (t. II, n. 7, pp. 77-80). Quest’opera consta di tredici strofe di otto versi ciascuna: il primo, il secondo, il quarto, il quinto e l’ottavo sono endecasillabi, mentre il terzo e il settimo sono settenari; lo schema delle rime è ABcBACdD. Il testo poetico risulta accompagnato da sette note a piè di pagina esplicative; alla loro compilazione potrebbe aver partecipato l’Autore, a dispetto di quanto si legge nella seconda nota e a dispetto di imprecisioni o errori contenute in altre (limitandoci all’ultima, il celebre medico e veterinario Antonio Alessandrini nacque a Bologna nel 1786 e morì nella stessa città nel 1861 senza vantare alcun parente originario di Vignola e senza avere mai risieduto in quella località, anche se da ragazzino egli dimorò nella vicina Savignano (oggi Savignano sul Panaro); pochi anni dopo la pubblicazione di questo poemetto, Selmi maturò rapporti amichevoli e di collaborazione professionale con lui e, poi, con uno dei suoi migliori allievi, il bolognese Giovanni Battista Ercolani [1817-1883], al quale rimase legatissimo per tutto il resto della vita e del quale fu collega all’Ateneo petroniano dal 1867 al 1881, anno della morte del nostro personaggio).<br><br> 
 
-Qui sotto trascriviamo per intero <i>Canto a Vignola,</i> avendo cura di normalizzare gli accenti alle convenzioni tipografiche odierne e di togliere il punto sia dopo il titolo sia dopo il nome del Vignolese in maiuscoletto, alla fine. Nell’originale, la numerazione delle note a piè di pagina ricomincia ogni volta che ha luogo il passaggio alla pagina successiva; nella presente sede, invece, abbiamo preferito adottare una numerazione consecutiva con asterischi dall’inizio alla fine del poemetto, collocando in chiusura tutti i testi delle note.</big></p><br><br>
+Qui sotto trascriviamo per intero <i>Canto a Vignola,</i> avendo cura di normalizzare gli accenti alle convenzioni tipografiche odierne e di togliere il punto sia dopo il titolo sia dopo nome del Vignolese (in maiuscoletto nel testo a stampa, in tutto maiuscolo qui di seguito), alla fine. Nell’originale, la numerazione delle note a piè di pagina ricomincia ogni volta che ha luogo il passaggio alla pagina successiva; nella presente sede, invece, abbiamo preferito adottare una numerazione consecutiva con asterischi dall’inizio alla fine del poemetto, collocando in chiusura tutti i testi delle note.</big></p><br><br>
 
-<p><big><big><big><big><big><center><i>Canto a Vignola</i></center></big></big></big></big></big></p><br><br>
+<p><big><big><big><big><big><center><i>Canto a Vignola</i></center></big></big></big></big></big></p><br>
 
-<p><big><i>Salve o terra natal, Vignola mia<br> 
+<p><big>Salve o terra natal, Vignola mia<br> 
   
 Alto-turrita, che prospetti l’onda<br> 
 
@@ -100,9 +100,9 @@ Perché sui campi che d’intorno guardi<br>
   
 Spessi metteano e fertili i vigneti<br> 
   
-Te nomaron Vignola</i> [*];<br> 
+Te nomaron Vignola [*];<br> 
 
-<i>Come Italia menò suoi dì lieti,<br> 
+Come Italia menò suoi dì lieti,<br> 
   
 Preda ai lupi voraci e ai feri pardi,<br> 
   
@@ -110,18 +110,18 @@ Tolta ogni legge e la natìa parola,<br>
   
 Che surgessi è membranza<br> 
   
-D’un italo Barone a fida stanza</i> [**].<br><br> 
+D’un italo Barone a fida stanza [**].<br><br> 
    
 
-<i>Eccelso monumento de’ nostr’avi,<br> 
+Eccelso monumento de’ nostr’avi,<br> 
   
 Tua rocca siede con suggello in fronte<br> 
   
-D’alta potenza antica:<br> 
+D’alta potenza antica:<br><br>
   
-D’inclito Sire per le cure pronte</i> [***],<br> 
+D’inclito Sire per le cure pronte [***],<br> 
   
-<i>In tempi meno di ferocia gravi,<br> 
+In tempi meno di ferocia gravi,<br> 
   
 Crebbe più salda a percossa nemica.<br> 
   
@@ -161,7 +161,8 @@ Le parla al core il dilettoso accento<br>
   
 Del prode che l’avvinse,<br> 
   
-E per lei ruppe lancia e il campo vinse.<br>   
+E per lei ruppe lancia e il campo vinse.<br><br>
+	
  
 Or sui robusti merli e sugli spaldi<br> 
   
@@ -177,9 +178,10 @@ Stan orrido ricetto a scelleranza;<br>
   
 Qui si raccolgon, quivi<br> 
   
-Coloro che vanno per misfar captivi</i> [****].<br><br>  
+Coloro che vanno per misfar captivi [****].<br><br> 
+	
 
-<i>Mi rissovengon tue sventure acerbe,<br> 
+Mi rissovengon tue sventure acerbe,<br> 
   
 O cara patria e strignemi pietate.<br> 
   
@@ -189,14 +191,14 @@ Precipitâr le tue mura scrollate!<br>
   
 S’altri a ristauro più l’ergea superbe,<br> 
   
-A danni lor Bologna la vicina</i> [*****]<br> 
+A danni lor Bologna la vicina [*****]<br> 
   
-<i>Poderosa affrettava<br> 
+Poderosa affrettava<br> 
   
 E novamente ad isfacel le dava.<br><br> 
    
 
-Ed Enzo Re</i> [******] <i>poscia lanciando il fuoco<br> 
+Ed Enzo Re [******] poscia lanciando il fuoco<br> 
   
 Sulle tue case, ardesti tutta in vampo.<br> 
   
@@ -232,9 +234,9 @@ Di brago aspersa ed in bordel vissuta.<br><br>
 
 Fierissimo dolor! Qual fia conforto?<br> 
   
-Oh! dei sommi tuoi figli la memoria!</i> [*******]<br> 
+Oh! dei sommi tuoi figli la memoria! [*******]<br> 
   
-<i>Cielo e terren lor desti;<br> 
+Cielo e terren lor desti;<br> 
 
 E n’hai già in guiderdone eterna gloria.<br> 
   
@@ -244,7 +246,8 @@ Scuotiti a gioja dai pensier molesti;<br>
   
 Su via levati e mira,<br> 
   
-Ecco l’italo genio che t’inspira.<br>   
+Ecco l’italo genio che t’inspira.<br><br>
+	
  
 Come il prode che vinto nella sfida<br> 
   
@@ -294,23 +297,23 @@ Di questa accesa fantasia delira.<br>
   
 Salve, ed il mio saluto<br> 
  
-Di nova luce non ti torni muto.</i></big></p><br><br>   
+Di nova luce non ti torni muto.</i></big></p><br>   
 
-<p><big><big><center>FRANCESCO SELMI</center></big></big></p><br><br><br>
+<p><big><big>FRANCESCO SELMI</big></big></p><br><br><br>
 
-<p><big>[*] Le bellissime colline che ora declinando a valle ora sollevandosi a cima s’avvicendano maravigliosamente, formando nel contorno del castello di Vignola una specie d’anfiteatro, furono anticamente coltivate a vigna. Dalle quali vignette o vineolae o viniolae (in latino barbaro) venne il nome di Vignola. Un antico autore l’appellò Neviola, ma sembra nome corrotto da Viniola; al che ci conforta l’osservazione, che l’arme di Vignola si compone d’una vite con grappoli maturi sostenuta da un palo, in campo turchino, secondo il Belloi cronista vignolese.<br><br>  
+<p><big>* Le bellissime colline che ora declinando a valle ora sollevandosi a cima s’avvicendano maravigliosamente, formando nel contorno del castello di Vignola una specie d’anfiteatro, furono anticamente coltivate a vigna. Dalle quali vignette o vineolae o viniolae (in latino barbaro) venne il nome di Vignola. Un antico autore l’appellò Neviola, ma sembra nome corrotto da Viniola; al che ci conforta l’osservazione, che l’arme di Vignola si compone d’una vite con grappoli maturi sostenuta da un palo, in campo turchino, secondo il Belloi cronista vignolese.<br><br>  
 
-[**] La prima memoria certa ch’abbiasi di Vignola è dell’anno 826. Nell’anno 936 essa era già forte castello. Le tenebre nella quale s’avvolge la fondazione di lei hanno permesso all’autore d’imaginarla in uno di quegli avvenimenti, che nel più cupo del medio evo per le barbariche inondazioni, dovevano tornare più frequenti.<br><br>  
+** La prima memoria certa ch’abbiasi di Vignola è dell’anno 826. Nell’anno 936 essa era già forte castello. Le tenebre nella quale s’avvolge la fondazione di lei hanno permesso all’autore d’imaginarla in uno di quegli avvenimenti, che nel più cupo del medio evo per le barbariche inondazioni, dovevano tornare più frequenti.<br><br>  
 
-[***] È questi Ambrogio Contrario, il quale nell’anno 1473, essendo Signore di Vignola, ne ampliò e ristaurò la rocca, edificò molta parte del castello ed abbellì le case e le contrade. Belloi nella sua cronica riferisce cotal fatto, e lo esalta con magnifiche lodi.<br><br>  
+*** È questi Ambrogio Contrario, il quale nell’anno 1473, essendo Signore di Vignola, ne ampliò e ristaurò la rocca, edificò molta parte del castello ed abbellì le case e le contrade. Belloi nella sua cronica riferisce cotal fatto, e lo esalta con magnifiche lodi.<br><br>  
 
-[****] Molte stanze della rocca sono state convertite ad uso di prigione.<br><br>  
+**** Molte stanze della rocca sono state convertite ad uso di prigione.<br><br>  
 
-[*****] I Bolognesi nel lasso di tempo d’undici anni, per due volte espugnarono il castello di Vignola, cioè nel 1228, essendo capitanati dal conte Alberto da Mangone, poscia (avendolo già restituito in tal frattempo ai Modenesi) il ripresero a viva forza nel 1239.<br><br>  
+***** I Bolognesi nel lasso di tempo d’undici anni, per due volte espugnarono il castello di Vignola, cioè nel 1228, essendo capitanati dal conte Alberto da Mangone, poscia (avendolo già restituito in tal frattempo ai Modenesi) il ripresero a viva forza nel 1239.<br><br>  
 
-[******] Nell’anno 1247 Enzo Re, movendo colla sua oste contro i fuorusciti Modenesi, nelle mani de’ quali era il castello di Vignola, quivi trasse, e quivi appiccò le fiamme, onde arse interamente.<br><br>  
+****** Nell’anno 1247 Enzo Re, movendo colla sua oste contro i fuorusciti Modenesi, nelle mani de’ quali era il castello di Vignola, quivi trasse, e quivi appiccò le fiamme, onde arse interamente.<br><br>  
 
-[*******] Fra i passati, basti accennare un Barozzi, un Cantelli, un Muratori, ed un Soli; fra i viventi, valga nominare il ch. prof. Antonio Alessandrini decoro dell’Università Bolognese e d’Italia tutta.<br></big></p><br><br><br>	
+******* Fra i passati, basti accennare un Barozzi, un Cantelli, un Muratori, ed un Soli; fra i viventi, valga nominare il ch. prof. Antonio Alessandrini decoro dell’Università Bolognese e d’Italia tutta.</big></p><br><br><br>	
 
 <h5><big><big><big><big><strong><center>SELMI NARRATORE</center></strong></big></big></big></big></big></h5><br><br>
 <p><big>Selmi si cimentò con impegno in diversi settori. Stese anche numerosi romanzi, racconti e favole, la maggior parte dei quali risultano tuttora inediti. Nel licenziare per la stampa alcuni dei suoi testi narrativi, egli preferì celarsi dietro pseudonimo: ad esempio, questo è il caso della raccolta <i>I primi racconti scritti da un Maestruccio di Scuola</i> (1847), uscita in seconda edizione corretta e accresciuta con il titolo di <i>Racconti morali scritti da un Maestruccio di Scuola per lettura dei giovanetti italiani</i> (1853), ma è pure il caso di <i>Il Favoleggiatore</i> (1857), raccolta di favole firmata «M. di S.»; inoltre, l’Autore pubblicò il romanzo <i>Battista Cannatelli</i> (1866) sotto il nome di «Italo De’ Vecchi».</big></p><br>
@@ -346,6 +349,10 @@ Ad avviso dell’insigne Vignolese, infine, Dante condensava in sé le migliori 
 	<img src="img/celebri vignolesi/Selmi/ritratto.jpg" width="500" height="650"><br><br><br>
 	<p><center><big>Selmi all’apparente età di circa 47-48 anni. Fonte: Fondo archivistico Selmi.</big></center></p><br>
 	<img src="img/celebri vignolesi/Selmi/Selmi quarantacinquenne.jpg" width="500" height="700"><br><br><br>
+	<p><center><big>Ritratto di Selmi in età senile, incisione eseguita a partire da un disegno dell’artista laziale Dante Paolocci (1849-1926);<br> accompagna <i>Francesco Selmi</i>, necrologio anonimo uscito in «L’Illustrazione Italiana»,<br> 28 agosto 1881, t. II dell’annata, pp. 139-140, con l’immagine a p. 140. Fonte: google.com</big></center></p><br>
+	<center><img src="img/celebri vignolesi/Selmi/illustrazione.jpg" width="450" height="650"></center><br><br><br>
+<p><center><big><i>Incipit</i> di <i>Canto a Vignola</i>. Fonte: google.com</big></center></p><br>
+	<center><img src="img/celebri vignolesi/Selmi/Canto a Vignola.jpg" width="550" height="650"></center><br><br><br>
 	<p><big><center>Prima di copertina dell’esemplare di <i>Il Convito</i> di Selmi recante la dedica autografa di un figlio dell’Autore<br> (probabilmente il secondogenito Pier Alberto), datata da Venezia il 26 agosto 1883, al conte Luigi Sernagiotto; collezione privata.</center><br>
 	Non priva d’interesse è la figura del dedicatario. Luigi Sernagiotto di Casavecchia nacque a Montebelluna, vicino a Treviso, il 27 novembre 1822 e morì a Venezia il 23 marzo 1904. Proveniente da una famiglia di commercianti, egli si dedicò a lungo agli ozi letterari, rivolgendo il proprio acuto ingegno a diversi campi e licenziando per la stampa parecchi libri e articoli. Uomo di profonda pietà, mise sovente al servizio della religione cattolica la sua notevole cultura e le sue non comuni conoscenze linguistiche, divenendo – oltretutto – uno dei maggiori studiosi ed esperti del pensiero e degli scritti di Antonio Rosmini (1797-1855) così come della loro diffusione e fortuna in Europa e nell’America settentrionale; di quell’illustre e – all’epoca – assai contrastato teologo e filosofo roveretano, Sernagiotto fu altresì uno dei principali apologisti ottocenteschi. Il nobiluomo veneto godette di una certa fama anche come critico d’arte.</big></p><br>
 	<img src="img/celebri vignolesi/Selmi/ricordi.jpg" width="450" height="650"><br><br><br>
@@ -353,8 +360,6 @@ Ad avviso dell’insigne Vignolese, infine, Dante condensava in sé le migliori 
 	<img src="img/celebri vignolesi/Selmi/lettera.jpg" width="450" height="650"><br><br>
 	<p><center><big><i>Sulle ptomaine od alcaloidi cadaverici e loro importanza in tossicologia. Osservazioni del Prof. Francesco Selmi.<br>Aggiuntavi una perizia per la ricerca della morfina</i>, In Bologna, Presso Nicola Zanichelli successore alli Marsigli e Rocchi, 1878.<br> Questo esemplare riporta una dedica dell’Autore a Giovanni Tosi Bellucci. Collezione privata.</big></center></p><br>
 	<img src="img/celebri vignolesi/Selmi/libro Selmi.jpg" width="450" height="650"><br><br><br>
-	<p><center><big>Ritratto di Selmi in età senile, incisione eseguita a partire da un disegno dell’artista laziale Dante Paolocci (1849-1926);<br> accompagna <i>Francesco Selmi</i>, necrologio anonimo uscito in «L’Illustrazione Italiana»,<br> 28 agosto 1881, t. II dell’annata, pp. 139-140, con l’immagine a p. 140. Fonte: google.com</big></center></p><br>
-	<center><img src="img/celebri vignolesi/Selmi/illustrazione.jpg" width="450" height="650"></center><br><br><br>
 	<p><center><big>Immagine recente della cappella funebre di Selmi, inaugurata nel 1901 all’interno del cimitero di Vignola.<br> Sotto il busto in gesso, opera dello scultore maranese Domenico Bernabei (1854-1936),<br> figura la lapide commemorativa dettata da Luigi Zini (1821-1894), amico dell’estinto.</big></center></p><br>
 	<center><img src="img/celebri vignolesi/Selmi/Busto e lapide.jpg" width="390" height="680"></center><br><br>
 	<p><center><big>Lapide commemorativa della cappella funebre di Selmi.</big></center></p><br>
