--- a/Selmi.html
+++ b/Selmi.html
@@ -117,7 +117,7 @@ Eccelso monumento de’ nostr’avi,<br>
   
 Tua rocca siede con suggello in fronte<br> 
   
-D’alta potenza antica:<br><br>
+D’alta potenza antica:<br>
   
 D’inclito Sire per le cure pronte [***],<br> 
   
