--- a/aprile.html
+++ b/aprile.html
@@ -35,7 +35,7 @@
 L’opera consta di tredici strofe di otto versi ciascuna: il primo, il secondo, il quarto, il quinto e l’ottavo sono endecasillabi; il terzo e il settimo, invece, sono settenari. Lo schema delle rime è ABcBACdD.</big></p>
  <p><big>Nell’immagine sottostante, l’<i>incipit</i> di <i>Canto a Vignola</i>. Fonte: google.com</big></p><br>
 <img src="img/celebri vignolesi/Selmi/Canto a Vignola.jpg" width="550" height="650"><br><br><br>
-<p><strong><big><big><center>Vuoi saperne di più su Francesco Selmi?<br>Allora, visita il suo <a href="Selmi Francesco.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
+<p><strong><big><big><center>Vuoi saperne di più su Francesco Selmi?<br>Allora, visita il suo <a href="Selmi.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
 
  <p><big><strong>2 aprile 1954</strong>: morì a Modena <strong>MARIO PELLEGRINI</strong>, alto ufficiale della Marina Militare del Regno d’Italia.<br><br>
 Nato a Vignola il 7 dicembre 1880, Mario Pellegrini partecipò alla Guerra Italo-Turca (1911-1912) e alla Prima Guerra Mondiale (1915-1918). Ricevette la Croce di Guerra, la Medaglia d’Argento e la Medaglia d’Oro al Valor Militare. Venne promosso capitano di fregata per merito di guerra. Nel 1928, tre anni dopo essere nominato capitano di vascello, lasciò il servizio attivo su sua domanda, poi diventò contrammiraglio nella riserva navale e, infine, ammiraglio di divisione della stessa.<br>
@@ -58,7 +58,7 @@ Nella prima immagine qui sotto, dagherrotipo che raffigura Francesco Selmi a 30 
 
 <img src="img/celebri vignolesi/Selmi/dagherrotipo.jpg" width="430" height="700"><br><br><br>
 <img src="img/celebri vignolesi/Selmi/illustrazione.jpg" width="450" height="650"><br><br><br>
-<p><strong><big><center>Vuoi saperne di più su Francesco Selmi?<br>Allora, visita il suo <a href="Selmi Francesco.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>
+<p><strong><big><center>Vuoi saperne di più su Francesco Selmi?<br>Allora, visita il suo <a href="Selmi.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>
 
 <p class="index-p3"><strong>15 aprile 1945</strong>: quando ormai la Seconda Guerra Mondiale stava volgendo al termine, nel corso di un BOMBARDAMENTO AEREO degli Alleati verificatosi in orario notturno, venne colpita la <strong>VILLA</strong> (o <strong>CASINO</strong>) <strong>TOSI BELLUCCI</strong>, elegante edificio d’impronta neoclassica progettato da <strong>Giuseppe Maria Soli</strong> (1747-1822) e risalente all'inizio del XIX secolo, che dalla primavera del 1916 costituiva la Residenza Municipale di Vignola (e lo è ancora oggi).<br>
 Gravissimi risultarono gli effetti dell’attacco bellico, in special modo nel lato est. Fortunatamente le più prestigiose aree dipinte dell’interno furono quasi del tutto risparmiate; subirono danni circoscritti anche le parti che erano state compiute poco prima di morire da <strong>Pietro Minghelli</strong> (1780-1822), il quale nella Villa Tosi Bellucci lasciò ai posteri uno dei più ragguardevoli esempi di vasta decorazione di stile neoclassico mai realizzati nell’intera Emilia-Romagna.<br>
