--- a/Selmi.html
+++ b/Selmi.html
@@ -73,9 +73,9 @@ Vignola deve molto a questo suo figlio, che le fu per tutta la vita legatissimo:
 
 <h5><big><big><big><big><strong><center>SELMI VERSEGGIATORE</center></strong></big></big></big></big></big></h5><br><br>
 <p><big>Durante l’adolescenza e la prima maturità, Selmi si dedicò non occasionalmente alla composizione di versi, spesso lasciandoli manoscritti.<br>
-Il suo lavoro poetico più noto è senza dubbio quello che egli destinò a celebrare il paese natale: si tratta di <i>Canto a Vignola</i>, uscito nell’aprile 1840 all’interno del «Giornale letterario scientifico modenese» (t. II, n. 7, pp. 77-80). Quest’opera consta di tredici strofe di otto versi ciascuna: il primo, il secondo, il quarto, il quinto e l’ottavo sono endecasillabi, mentre il terzo e il settimo sono settenari; lo schema delle rime è ABcBACdD. Il testo poetico risulta accompagnato da sette note a piè di pagina esplicative; alla loro compilazione potrebbe aver partecipato l’Autore, a dispetto di quanto si legge nella seconda nota e a dispetto di imprecisioni o errori contenute in altre (limitandoci all’ultima, il celebre medico e veterinario Antonio Alessandrini nacque a Bologna nel 1786 e morì nella stessa città nel 1861 senza vantare alcun parente originario di Vignola e senza avere mai risieduto in quella località, anche se da ragazzino egli dimorò nella vicina Savignano (oggi Savignano sul Panaro); pochi anni dopo la pubblicazione di questo poemetto, Selmi maturò rapporti amichevoli e di collaborazione professionale con lui e, poi, con uno dei suoi migliori allievi, il bolognese Giovanni Battista Ercolani [1817-1883], al quale rimase legatissimo per tutto il resto della vita e del quale fu collega all’Ateneo petroniano dal 1867 al 1881, anno della morte del nostro personaggio).<br><br> 
+Il suo lavoro poetico più noto è senza dubbio quello che egli destinò a celebrare il paese natale: si tratta di <i>Canto a Vignola</i>, uscito nell’aprile 1840 all’interno del «Giornale letterario scientifico modenese» (t. II, n. 7, pp. 77-80). Quest’opera consta di tredici strofe di otto versi ciascuna: il primo, il secondo, il quarto, il quinto e l’ottavo sono endecasillabi, mentre il terzo e il settimo sono settenari; lo schema delle rime è ABcBACdD. Il testo poetico risulta accompagnato da sette note esplicative a piè di pagina; alla loro compilazione potrebbe aver partecipato l’Autore, a dispetto di quanto si legge nella seconda nota e a dispetto di imprecisioni o errori contenuti in altre (limitandoci all’ultima, il celebre medico e veterinario Antonio Alessandrini nacque a Bologna nel 1786 e morì nella stessa città nel 1861 senza vantare alcun parente originario di Vignola e senza avere mai risieduto in quella località, anche se da ragazzino egli dimorò nella vicina Savignano [oggi Savignano sul Panaro]; pochi anni dopo la pubblicazione di questo poemetto, Selmi maturò rapporti amichevoli e di collaborazione professionale con lui e, poi, con uno dei suoi migliori allievi, il bolognese Giovanni Battista Ercolani [1817-1883], al quale rimase legatissimo per tutto il resto della vita e del quale fu collega all’Ateneo petroniano dal 1867 al 1881, anno della morte del nostro personaggio).<br><br> 
 
-Qui sotto trascriviamo per intero <i>Canto a Vignola,</i> avendo cura di normalizzare gli accenti alle convenzioni tipografiche odierne e di togliere il punto sia dopo il titolo sia dopo nome del Vignolese (in maiuscoletto nel testo a stampa, in tutto maiuscolo qui di seguito), alla fine. Nell’originale, la numerazione delle note a piè di pagina ricomincia ogni volta che ha luogo il passaggio alla pagina successiva; nella presente sede, invece, abbiamo preferito adottare una numerazione consecutiva con asterischi dall’inizio alla fine del poemetto, collocando in chiusura tutti i testi delle note.</big></p><br><br>
+Qui sotto trascriviamo per intero <i>Canto a Vignola,</i> avendo cura di normalizzare gli accenti alle convenzioni tipografiche odierne e di togliere il punto sia dopo il titolo sia dopo il nome del Vignolese (in maiuscoletto nel testo a stampa, in tutto maiuscolo qui di seguito), alla fine. Nell’originale, la numerazione delle note a piè di pagina ricomincia ogni volta che ha luogo il passaggio alla pagina successiva; nella presente sede, invece, abbiamo preferito adottare una numerazione consecutiva con asterischi dall’inizio alla fine del poemetto, collocando in chiusura tutti i testi delle note.</big></p><br><br>
 
 <p><big><big><big><big><big><center><i>Canto a Vignola</i></center></big></big></big></big></big></p><br>
 
@@ -100,7 +100,7 @@ Perché sui campi che d’intorno guardi<br>
   
 Spessi metteano e fertili i vigneti<br> 
   
-Te nomaron Vignola [*];<br> 
+Te nomaron Vignola*;<br> 
 
 Come Italia menò suoi dì lieti,<br> 
   
@@ -110,7 +110,7 @@ Tolta ogni legge e la natìa parola,<br>
   
 Che surgessi è membranza<br> 
   
-D’un italo Barone a fida stanza [**].<br><br> 
+D’un italo Barone a fida stanza**.<br><br> 
    
 
 Eccelso monumento de’ nostr’avi,<br> 
@@ -119,7 +119,7 @@ Tua rocca siede con suggello in fronte<br>
   
 D’alta potenza antica:<br>
   
-D’inclito Sire per le cure pronte [***],<br> 
+D’inclito Sire per le cure pronte***,<br> 
   
 In tempi meno di ferocia gravi,<br> 
   
@@ -178,7 +178,7 @@ Stan orrido ricetto a scelleranza;<br>
   
 Qui si raccolgon, quivi<br> 
   
-Coloro che vanno per misfar captivi [****].<br><br> 
+Coloro che vanno per misfar captivi****.<br><br> 
 	
 
 Mi rissovengon tue sventure acerbe,<br> 
@@ -191,14 +191,14 @@ Precipitâr le tue mura scrollate!<br>
   
 S’altri a ristauro più l’ergea superbe,<br> 
   
-A danni lor Bologna la vicina [*****]<br> 
+A danni lor Bologna la vicina*****<br> 
   
 Poderosa affrettava<br> 
   
 E novamente ad isfacel le dava.<br><br> 
    
 
-Ed Enzo Re [******] poscia lanciando il fuoco<br> 
+Ed Enzo Re****** poscia lanciando il fuoco<br> 
   
 Sulle tue case, ardesti tutta in vampo.<br> 
   
@@ -234,7 +234,7 @@ Di brago aspersa ed in bordel vissuta.<br><br>
 
 Fierissimo dolor! Qual fia conforto?<br> 
   
-Oh! dei sommi tuoi figli la memoria! [*******]<br> 
+Oh! dei sommi tuoi figli la memoria!*******<br> 
   
 Cielo e terren lor desti;<br> 
 
@@ -299,20 +299,14 @@ Salve, ed il mio saluto<br>
  
 Di nova luce non ti torni muto.</i></big></p><br>   
 
-<p><big><big>FRANCESCO SELMI</big></big></p><br><br><br>
+                              <p><big>FRANCESCO SELMI</big></p><br><br><br>
 
-<p><big>* Le bellissime colline che ora declinando a valle ora sollevandosi a cima s’avvicendano maravigliosamente, formando nel contorno del castello di Vignola una specie d’anfiteatro, furono anticamente coltivate a vigna. Dalle quali vignette o vineolae o viniolae (in latino barbaro) venne il nome di Vignola. Un antico autore l’appellò Neviola, ma sembra nome corrotto da Viniola; al che ci conforta l’osservazione, che l’arme di Vignola si compone d’una vite con grappoli maturi sostenuta da un palo, in campo turchino, secondo il Belloi cronista vignolese.<br><br>  
-
-** La prima memoria certa ch’abbiasi di Vignola è dell’anno 826. Nell’anno 936 essa era già forte castello. Le tenebre nella quale s’avvolge la fondazione di lei hanno permesso all’autore d’imaginarla in uno di quegli avvenimenti, che nel più cupo del medio evo per le barbariche inondazioni, dovevano tornare più frequenti.<br><br>  
-
-*** È questi Ambrogio Contrario, il quale nell’anno 1473, essendo Signore di Vignola, ne ampliò e ristaurò la rocca, edificò molta parte del castello ed abbellì le case e le contrade. Belloi nella sua cronica riferisce cotal fatto, e lo esalta con magnifiche lodi.<br><br>  
-
-**** Molte stanze della rocca sono state convertite ad uso di prigione.<br><br>  
-
-***** I Bolognesi nel lasso di tempo d’undici anni, per due volte espugnarono il castello di Vignola, cioè nel 1228, essendo capitanati dal conte Alberto da Mangone, poscia (avendolo già restituito in tal frattempo ai Modenesi) il ripresero a viva forza nel 1239.<br><br>  
-
-****** Nell’anno 1247 Enzo Re, movendo colla sua oste contro i fuorusciti Modenesi, nelle mani de’ quali era il castello di Vignola, quivi trasse, e quivi appiccò le fiamme, onde arse interamente.<br><br>  
-
+<p><big>* Le bellissime colline che ora declinando a valle ora sollevandosi a cima s’avvicendano maravigliosamente, formando nel contorno del castello di Vignola una specie d’anfiteatro, furono anticamente coltivate a vigna. Dalle quali vignette o vineolae o viniolae (in latino barbaro) venne il nome di Vignola. Un antico autore l’appellò Neviola, ma sembra nome corrotto da Viniola; al che ci conforta l’osservazione, che l’arme di Vignola si compone d’una vite con grappoli maturi sostenuta da un palo, in campo turchino, secondo il Belloi cronista vignolese.  
+** La prima memoria certa ch’abbiasi di Vignola è dell’anno 826. Nell’anno 936 essa era già forte castello. Le tenebre nella quale s’avvolge la fondazione di lei hanno permesso all’autore d’imaginarla in uno di quegli avvenimenti, che nel più cupo del medio evo per le barbariche inondazioni, dovevano tornare più frequenti. 
+*** È questi Ambrogio Contrario, il quale nell’anno 1473, essendo Signore di Vignola, ne ampliò e ristaurò la rocca, edificò molta parte del castello ed abbellì le case e le contrade. Belloi nella sua cronica riferisce cotal fatto, e lo esalta con magnifiche lodi.  
+**** Molte stanze della rocca sono state convertite ad uso di prigione.
+***** I Bolognesi nel lasso di tempo d’undici anni, per due volte espugnarono il castello di Vignola, cioè nel 1228, essendo capitanati dal conte Alberto da Mangone, poscia (avendolo già restituito in tal frattempo ai Modenesi) il ripresero a viva forza nel 1239.  
+****** Nell’anno 1247 Enzo Re, movendo colla sua oste contro i fuorusciti Modenesi, nelle mani de’ quali era il castello di Vignola, quivi trasse, e quivi appiccò le fiamme, onde arse interamente.  
 ******* Fra i passati, basti accennare un Barozzi, un Cantelli, un Muratori, ed un Soli; fra i viventi, valga nominare il ch. prof. Antonio Alessandrini decoro dell’Università Bolognese e d’Italia tutta.</big></p><br><br><br>	
 
 <h5><big><big><big><big><strong><center>SELMI NARRATORE</center></strong></big></big></big></big></big></h5><br><br>
