--- a/Selmi.html
+++ b/Selmi.html
@@ -299,7 +299,7 @@ Salve, ed il mio saluto<br>
  
 Di nova luce non ti torni muto.</i></big></p><br>   
 
-                              <p><big>FRANCESCO SELMI</big></p><br><br><br>
+                              <p>FRANCESCO SELMI</p><br><br><br>
 
 <p><big>* Le bellissime colline che ora declinando a valle ora sollevandosi a cima s’avvicendano maravigliosamente, formando nel contorno del castello di Vignola una specie d’anfiteatro, furono anticamente coltivate a vigna. Dalle quali vignette o vineolae o viniolae (in latino barbaro) venne il nome di Vignola. Un antico autore l’appellò Neviola, ma sembra nome corrotto da Viniola; al che ci conforta l’osservazione, che l’arme di Vignola si compone d’una vite con grappoli maturi sostenuta da un palo, in campo turchino, secondo il Belloi cronista vignolese.<br>  
 ** La prima memoria certa ch’abbiasi di Vignola è dell’anno 826. Nell’anno 936 essa era già forte castello. Le tenebre nella quale s’avvolge la fondazione di lei hanno permesso all’autore d’imaginarla in uno di quegli avvenimenti, che nel più cupo del medio evo per le barbariche inondazioni, dovevano tornare più frequenti.<br> 
