--- a/Favoleggiatore.html
+++ b/Favoleggiatore.html
@@ -27,7 +27,7 @@
 </ul>
 </nav>
 </header>
-<section><br>
+<section><br><br>
   <p><big><strong><a href="Selmi.html">Profilo di Selmi</a></strong></big></p><br><br><br>
   <h2><strong><big>IL FAVOLEGGIATORE</big></strong></h2><br><br>
   <center>
@@ -122,7 +122,7 @@
 <td><big><big><strong><a href="ilcane.html">44. Il cane</a></strong></td></tr>
 </table>
 </center>
- <br><br><br>
+ <br><br><br><br>
   <p><big><strong><a href="Selmi.html">Profilo di Selmi</a></strong></big></p><br><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
