--- a/Novità.html
+++ b/Novità.html
@@ -40,7 +40,13 @@
  
 <strong>GIUSEPPE MARIA SOLI</strong>, architetto, pittore, insegnante e direttore di Accademia delle Belle Arti: <strong>200 ANNI DALLA MORTE</strong>.</big></p>
 <p><big>Nell’immagine, vista della rocca di Vignola da Via Zenzano in una fotografia scattata il 4 aprile 2022.</big></p><br>
-<img src="img/FOTO VARIE/roccainfiore.jpg" width="900" height="700"><br><br><br><br><br><br> 
+<img src="img/FOTO VARIE/roccainfiore.jpg" width="900" height="700"><br><br><br><br><br><br>
+	
+<p><big><big><span style="text-decoration: underline;">21 aprile 2022</span></big></big></p><br><br>
+<p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>LA CINCIARELLA ED IL CIGNO</strong></i>, la sesta favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da FRANCESCO SELMI (1817-1881):<br>  
+«In un ameno laghetto, ombreggiato di salici piangenti, teneva sua dimora un cigno; e quivi pure costumava una cinciarella a caccia d’insettuzzi ed a godere la frescura del luogo. Per la lunga consuetudine di vedersi, nacque domestichezza tra i due uccelli; onde in ogni giorno tenevano conversazione insieme circa le notizie correnti e altre cose che fossero di qualche interesse per loro.
+La cinciarella, di umore acre e di lingua ardita, soleva scoccare di quando in quando motti ed arguzie mordaci, a cui il cigno non rispondeva mai, e di cui non pareva si offendesse: credo per degnazione di sé. Dal quale silenzio l’altra o pigliasse coraggio, o piuttosto giocasse a sicurtà per la piccolezza propria, o non sembrasse a se medesima una gran cosa per l’acuto zirlo con cui stuzzica l’aria, fatto sta che crebbe sempre più di petulanza, fino al punto da annoiare prodigiosamente il cigno, il quale uscito da’ gangheri non si restrinse più nel propostosi contegno».<br>  
+Per leggere integralmente questa favola, <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">clicca qui</a>.</big></p><br><br><br>	
 	
 <p><big><big><span style="text-decoration: underline;">12 aprile 2022</span></big></big></p><br><br>
 <p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>UN SOGNO</strong></i>, la quinta favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da FRANCESCO SELMI (1817-1881):<br>  
