--- a/Garavini.html
+++ b/Garavini.html
@@ -58,6 +58,8 @@ Nel 1867 Garavini, appassionato d’arte, riuscì a rintracciare e ad acquistare
 Allo stato attuale degli studi, non siamo al corrente né della data né del luogo della morte di Garavini (nel 1874, però, egli risultava sicuramente in vita; esistono molte probabilità che lo fosse ancora nel 1880, e forse lo era anche nel 1885).</big></p><br><br><br>
 
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
+<p><center><big><big>Arsenale della Marina di Algeri, incisione anonima del 1835. Fonte: google.com</center></big></big></p>
+<img src="img/celebri vignolesi/Garavini Carlo/arsenale.jpg" width="900" height="500"><br><br>	
 <p><center><big><big>Palazzo d’Ambra (già Villa Garavini) a Ischia, immagine risalente al 1970 circa. Fonte: google.com</center><big></big></p>
 <img src="img/celebri vignolesi/Garavini Carlo/1970.jpg" width="850" height="600"><br><br>
 <p><center>Foto recente del Palazzo D’Ambra. Fonte: google.com</center></p>
