--- a/Novità.html
+++ b/Novità.html
@@ -42,6 +42,11 @@
 <p><big>Nell’immagine, vista della rocca di Vignola da Via Zenzano in una fotografia scattata il 4 aprile 2022.</big></p><br>
 <img src="img/FOTO VARIE/roccainfiore.jpg" width="900" height="700"><br><br><br><br><br><br>
 	
+<p><big><big><span style="text-decoration: underline;">03 maggio 2022</span></big></big></p><br><br>
+<p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>MODO DIVERSO DI APPREZZARE IL TEMPO</strong></i>, la settima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da FRANCESCO SELMI (1817-1881):<br>  
+«Un passero, un asino ed una marmotta si trovarono a caso insieme sul declivio di una bella ed aprica collina, da cui il tiepido sole della nuova primavera aveva fugata la neve cadutavi durante la gelida stagione. Tra il verdeggiare fresco e rigoglioso dell’erba levavano già la bianca corolla le margheritine; e l’aria, olezzante e vigorosa, pungeva, dilettava, ed eccitava le forze all’attività. Di colà schiudevasi una magnifica vista di altipiani, montagne ed alpi, quale ancora coll’aspetto del pieno verno, quale rispondente alla virtù risorta della mite temperie».<br>  
+Per leggere integralmente questa favola, <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">clicca qui</a>.</big></p><br><br><br>	
+	
 <p><big><big><span style="text-decoration: underline;">21 aprile 2022</span></big></big></p><br><br>
 <p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>LA CINCIARELLA ED IL CIGNO</strong></i>, la sesta favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da FRANCESCO SELMI (1817-1881):<br>  
 «In un ameno laghetto, ombreggiato di salici piangenti, teneva sua dimora un cigno; e quivi pure costumava una cinciarella a caccia d’insettuzzi ed a godere la frescura del luogo. Per la lunga consuetudine di vedersi, nacque domestichezza tra i due uccelli; onde in ogni giorno tenevano conversazione insieme circa le notizie correnti e altre cose che fossero di qualche interesse per loro.
