--- a/maggio.html
+++ b/maggio.html
@@ -30,14 +30,14 @@
 <section><br>
 <p><big><strong><a href="Anniversari.html">Indice dei mesi</a></big></strong></center></p><br><br>
 <h3><big><strong>MAGGIO</strong></big></h3><br><br><br>
-<p><big><strong>1° maggio 1881</strong>: 1° maggio 1881: uscì a Bologna il primo numero del quotidiano «Don Chisciotte» (4 pagine).<br><br>
+<p><big><strong>1° maggio 1881</strong>: uscì a Bologna il primo numero del quotidiano «Don Chisciotte» (4 pagine).<br><br>
 
 Questo giornale, divenuto abbastanza presto portavoce dell’Associazione Democratica Bolognese, è tuttora ricordato come uno dei più celebri e pugnaci fogli di idee repubblicane e patriottiche presenti nell’Italia del tempo, e <strong>GIUSEPPE BARBANTI BRÒDANO</strong> (1853-1931) fu uno dei suoi fondatori – insieme con Luigi Ìllica (1857-1919), il quale ne assunse poi la direzione, e Luigi Lodi (1856-1933) – e uno di coloro che profusero maggiori energie per mantenerlo in vita.<br> 
 A dettare il programma del quotidiano provvide Giosuè Carducci (1835-1807), amico personale di Barbanti Bròdano. Facevano parte della redazione Quirico Filopanti (1812-1894) e Giuseppe Ceneri (1827-1898).<br>
 Oltre a tutti i personaggi citati sopra, tra i collaboratori del foglio – quasi sempre in forma anonima, oppure firmandosi con pseudonimo o iniziali puntate – figuravano Abdon Altobelli (1849-1909), Felice Cavallotti (1842-1898), Olindo Guerrini (1845-1916), Guido Mazzoni (1859-1943), Enrico Panzacchi (1840-1904), Corrado Ricci (1858-1934) e Aurelio Saffi (1819-1890).<br>
 Il «Don Chisciotte» cessò con il numero del 7 gennaio 1885.<br><br>
 Nell’immagine, la prima pagina di un numero del «Don Chisciotte». Fonte: google.com</big></p><br><br>
-<big><strong><big><center>Vuoi saperne di più su Giuseppe Barbanti Bròdano?<br>Allora, visita il suo <a href="Barbanti Bròdano.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong><br><br><br>
+<strong><big><center>Vuoi saperne di più su Giuseppe Barbanti Bròdano?<br>Allora, visita il suo <a href="Barbanti Bròdano.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong><br><br><br>
 
 <p><big><strong>6 maggio 1807</strong>: nacque a Vignola <strong>CARLO GARAVINI</strong>, diplomatico, viaggiatore, avventuriero, commerciante, geografo e armatore.<br><br> 
 
