--- a/maggio.html
+++ b/maggio.html
@@ -35,7 +35,7 @@ Questo giornale, divenuto abbastanza presto portavoce dell’Associazione Democr
 A dettare il programma del quotidiano provvide Giosuè Carducci (1835-1807), amico personale di Barbanti Bròdano. Facevano parte della redazione Quirico Filopanti (1812-1894) e Giuseppe Ceneri (1827-1898).<br>
 Oltre a tutti i personaggi citati sopra, tra i collaboratori del foglio – quasi sempre in forma anonima, oppure firmandosi con pseudonimo o iniziali puntate – figuravano Abdon Altobelli (1849-1909), Felice Cavallotti (1842-1898), Olindo Guerrini (1845-1916), Guido Mazzoni (1859-1943), Enrico Panzacchi (1840-1904), Corrado Ricci (1858-1934) e Aurelio Saffi (1819-1890).<br>
 Il «Don Chisciotte» cessò con il numero del 7 gennaio 1885.<br><br>
-Nell’immagine, la prima pagina di un numero del «Don Chisciotte».</big></p><br><br>
+Nell’immagine, la prima pagina del numero inaugurale del «Don Chisciotte».</big></p><br><br>
  <center><img src="img/celebri vignolesi/Barbanti Brodano/donchisciotte.jpg" width="450" height="600"></center><br><br><br>
 <big><big><strong><center>Vuoi saperne di più su Giuseppe Barbanti Bròdano?<br>Allora, visita il suo <a href="Barbanti Bròdano.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong><br><br><br>
     
